--- a/views/home.ejs
+++ b/views/home.ejs
@@ -29,7 +29,7 @@
         <div class='list-group'>
           <!-- loop over blog posts and render them -->
           <% posts.forEach((post) => { %>
-            <a href="'/posts/<%= post.id %>" class='list-group-item'>
+            <a href="/posts/<%= post.id %>" class='list-group-item'>
               <h4 class='list-group-item-heading'><%= post.title %></h4>
               <p class='list-group-item-text'><%= post.author %></p>
             </a>
